🐛 Add TODOs, fix button alignment, fix note type

--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -3,7 +3,6 @@
 button {
     display: flex;
     justify-content: center;
-    align-items: baseline;
 
     color: $text-primary-color;
     background-color: inherit;
@@ -16,11 +15,13 @@ button {
     }
 
     &.rectangular {
+        align-items: baseline;
         margin: 0.3rem;
         padding: 0.7rem;
     }
 
     &.circular {
+        align-items: center;
         border-radius: 50%;
         width: 1rem;
         height: 1rem;
